--- a/UMS/src/main/webapp/register.html
+++ b/UMS/src/main/webapp/register.html
@@ -9,7 +9,7 @@
 <center>
 <h2> Student Registration Form </h2>
 <table border=0>
-<form method="post" action="RegistrationController">
+<form method="post" action="RC">
 <tr>
 <td>id </td> <td>  <input type="text" name="id"></td>
 </tr>
