--- a/UMS/src/main/webapp/register.html
+++ b/UMS/src/main/webapp/register.html
@@ -5,7 +5,7 @@
 <title>Registration</title>
 <link rel="stylesheet" href="style.css" />
 </head>
-<body bgcolor="green">
+<body >
 <center>
 <h2> Student Registration Form </h2>
 <table border=0>
