2nd Servlet and
JSP

--- a/UMS/src/main/webapp/register.html
+++ b/UMS/src/main/webapp/register.html
@@ -28,6 +28,8 @@
 <td></td><td><input type="submit" value="register"></td>
 </form>
 </table>
+
+<a href="FetchAll">ShowStudents</a>
 </center>
 </body>
 </html>
